@@ -1,4 +1,5 @@
 Version 5.7.1 (TBD)
+    Fixed a bug where error messages were displayed incorrectly in the image dialog #TINY-7099
     Fixed a bug where context menu items with names that contained uppercase characters were not displayed #TINY-7072
     Fixed an issue where URLs were not correctly filtered in some cases #TINY-7025
     Fixed context menu items lacking support for the `disabled` and `shortcut` properties #TINY-7073
